examples/aws/eks-cluster-mgmt/scripts/platform/manifests/gitlab.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  namespace: gitlab
spec:
  selector:
    matchLabels:
      app: gitlab
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
      - name: gitlab
        image: gitlab/gitlab-ce:latest
        ports:
        - containerPort: 80
          name: http
        # - containerPort: 443
        #   name: https
        - containerPort: 22
          name: ssh
        resources:
          requests:
            memory: "4Gi"
            cpu: "2"
          limits:
            memory: "4Gi"
            cpu: "2"
        securityContext:
          privileged: false
          runAsUser: 0
        livenessProbe:
          httpGet:
            path: /gitlab/-/liveness
            port: 80
          initialDelaySeconds: 180
          timeoutSeconds: 15
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /gitlab/-/readiness
            port: 80
          initialDelaySeconds: 180
          timeoutSeconds: 15
          periodSeconds: 30
        volumeMounts:
        - name: gitlab-data
          mountPath: /etc/gitlab
          subPath: config
        - name: gitlab-data
          mountPath: /var/log/gitlab
          subPath: logs
        - name: gitlab-data
          mountPath: /var/opt/gitlab
          subPath: data
      volumes:
      - name: gitlab-data
        persistentVolumeClaim:
          claimName: gitlab-data
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab
  namespace: gitlab
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /gitlab
            pathType: Prefix
            backend:
              service:
                name: gitlab
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: gitlab
spec:
  type: ClusterIP
  ports:
  - name: http
    targetPort: 80
    port: 80
  - name: ssh
    port: 22
    targetPort: 22
  selector:
    app: gitlab
